# OHS-

./: db.sqlite3  manage.py  pyproject.toml  requirements.txt
safety_mvp/: asgi.py  settings.py  urls.py  wsgi.py
safety_mvp/ohs/: admin.py  apps.py  models.py  views.py
safety_mvp/ohs/migrations/: 0001_initial.py  0002_objective.py  0003_alter_objective_target.py  0004_observation_attachments.py  0005_observation_file_observation_upload_date_and_more.py  0006_remove_observation_upload_date_and_more.py  0007_remove_employee_user_employee_name_trainingmatrix.py
safety_mvp/templates/: home.html
