[project]
name = "ohs-iso-chklst"
version = "0.1.0"
description = ""
authors = [
    {name = "MansLikeNight",email = "evabloo2342@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
