[tool.poetry]
name = "ohs-iso-chklst"
version = "0.1.0"
description = ""
authors = ["MansLikeNight <evabloo2342@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
gunicorn = "^23.0.0"
whitenoise = "^6.9.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
